config settings, add back in query

--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,6 @@ twitter:
   image_alt_text: 'Defend the Window'
 
 # Build settings
-safe: false
+safe: true
 source: src
 include: ["_pages"]
-
-
-gems:
-  - jekyll-sitemap
