update to twitter card image

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ twitter:
   username: '@defendthewindow'
   title: 'Defend the Window'
   description: 'Defend the Overton Window'
-  featured_image: '/img/defend.svg'
+  featured_image: '/img/twitter-share-280-150.jpg'
   image_alt_text: 'Defend the Window'
 
 # Build settings
